nambahin sejarah.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
 		</article>
 
 		<div class="table">
-			<table border="1" width="900">
+			<table border="1" width="9
+
+
+
+
+			00">
 				<thead>
 					<!-- Baris Pertama -->
 					<tr>
