benerin yang kurang

--- a/sejarah.html
+++ b/sejarah.html
@@ -3,6 +3,14 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 <head>
 	<title>Sejarah HTML</title>
+
+	<nav class="link">
+			<a href="index.html">Home</a> |
+			<a href="about.html" target="_blank">About</a> |
+			<a href="contact.html" target="_blank">Contact</a> |
+			<a href="sejarah.html" target="_blank">Sejarah</a>
+		</nav>
+
 	<h1 class="boldr">Sejarah HTML</h1>	
 </head>
 
