--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,8 @@
 		<nav class="link">
 			<a href="index.html">Home</a> |
 			<a href="about.html" target="_blank">About</a> |
-			<a href="contact.html" target="_blank">Contact</a> 
+			<a href="contact.html" target="_blank">Contact</a> |
+			<a href="sejarah.html" target="_blank">Sejarah</a>
 		</nav>
 
 	<body class="contact">
