menambahkan Sejarah Javascript

--- a/sejarah.html
+++ b/sejarah.html
@@ -50,13 +50,81 @@
 		<div>
 			Sebagian besar halaman di Web saat ini dibuat menggunakan HTML 4.01 atau XHTML 1.0. Namun, dalam beberapa tahun terakhir, W3C bekerja sama dengan organisasi lain, WHATWG. Mereka telah mengerjakan versi baru dari <b>HTML</b>, yakni <b>HTML5</b>. Sejak 2011, HTML5 masih berupa spesifikasi draf dan belum menjadi standar resmi.
 		</div>
+
+<h1 class="boldy">Sejarah Javascript</h1>
+		<p class="font2">
+			<div>
+				<b>Javascript</b> adalah suatu bahasa pemrograman tingkat tinggi dan dinamis.JavaScript populer di internet dan dapat bekerja di sebagian besar penjelajah web populer seperti Google Chrome, Internet Explorer, Mozilla Firefox, Netscape dan Opera. Kode JavaScript dapat disisipkan dalam halaman web menggunakan tag script. JavaScript merupakan salah satu teknologi inti World Wide Web selain HTML dan CSS. JavaScript membantu membuat halaman web interaktif dan merupakan bagian aplikasi web yang esensial.
+			</div>
+		
+<br><br>
+		
+			<div>
+				Awalnya hanya diimplementasi sebagai client-side dalam penjelajah web, kini engine JavaScript disisipkan ke dalam perangkat lunak lain seperti dalam server-side dalam server web dan basis data, dalam program non web seperti perangkat lunak pengolah kata dan pembaca PDF, dan sebagai runtime environment yang memungkinkan penggunaan JavaScript untuk membuat aplikasi desktop maupun mobile.
+			</div>
+		
+<br><br>
+		
+			<div>
+				JavaScript pertama kali dikembangkan oleh Brendan Eich dari Netscape pada tahun 4 Desember 1995 di bawah nama Mocha, yang nantinya namanya diganti menjadi LiveScript, dan akhirnya menjadi JavaScript. JavaScript bisa digunakan untuk banyak tujuan, misalnya untuk membuat efek rollover baik di gambar maupun teks, dan yang penting juga adalah untuk membuat AJAX.
+			</div>
+
+			<p>
+				Berikut adalah beberapa contoh code javascript :<br><br>
+
+				// Variable string <br><br>
+
+					var tumbuhan = "wortel"<br>
+					document.write(tumbuhan)<br><br>
+
+				// variable integer<br><br>
+
+					var nomor = 10 <br>
+					document.write(nomor)<br><br>
+
+				// operator + <br><br>
+
+					var nomor = 10 +30<br>
+					document.write(nomor)<br><br>
+
+				// if else<br><br>
+	
+				// operator pembanding ==(sama dengan)<br><br>
+
+					var c = 5;<br><br>
+
+						if(c == 2){<br>
+							document.write("YES");<br>
+						}else{<br>
+							document.write("no");<br>
+						}<br><br>
+
+				//	!=(tidak sama dengan)<br><br>
+
+						if(c != 2){<br>
+							document.write("yes");<br>
+						}else{<br>
+							document.write("no");<br>
+						}<br><br>
+
+				code di atas merupakan beberapa contoh code dan fungsi javascript
+
+			</p>
+
+		</p>
 </body>
 
 <br>
 <br>
 <br>
 
-	<footer style="font-family: arial;">
+	<footer style="font-family: arial; background-color: dimgray;" >
+		<p style="text-align: center;">
+			<p style="color:red;">Follow Sosial Media Saya :</p>
+			<a href="https://github.com/AryaAtha/">Github</a>
+			<a href=""></a>
+			<a href=""></a>
+		</p>
 		<p><b>Copyright &copy; 2023 Arya Athafarrel Syah</b></p>
 	</footer>
 
