tambah warna sedikit

--- a/index.html
+++ b/index.html
@@ -29,13 +29,8 @@
 		</article>
 
 		<div class="table">
-			<table border="1" width="9
-
-
-
-
-			00">
-				<thead>
+			<table border="1" width="1200">
+				<thead class="twarna">
 					<!-- Baris Pertama -->
 					<tr>
 						<th>Skill</th>
@@ -69,7 +64,13 @@
 	</body>
 
 	<footer>
-		<p>Copyright &copy; 2023 Arya Athafarrel Syah</p>
+		<p>
+			<p style="color:red;"><b>Follow Sosial Media Saya :</b></p>
+			<a href="https://github.com/AryaAtha/"><b>Github</b></a>
+			<a href=""></a>
+			<a href=""></a>
+		</p>
+		<p><b>Copyright &copy; 2023 Arya Athafarrel Syah</b></p>
 	</footer>
 
 </html>
