--- a/sejarah.html
+++ b/sejarah.html
@@ -118,8 +118,8 @@
 <br>
 <br>
 
-	<footer style="font-family: arial; background-color: dimgray;" >
-		<p style="text-align: center;">
+	<footer>
+		<p>
 			<p style="color:red;">Follow Sosial Media Saya :</p>
 			<a href="https://github.com/AryaAtha/">Github</a>
 			<a href=""></a>
