--- a/about.html
+++ b/about.html
@@ -31,7 +31,13 @@
 	</body>
 
 	<footer>
-		<p>Copyright &copy; 2023 Arya Athafarrel Syah</p>
+		<p>
+			<p style="color:red;">Follow Sosial Media Saya :</p>
+			<a href="https://github.com/AryaAtha/">Github</a>
+			<a href=""></a>
+			<a href=""></a>
+		</p>
+		<p><b>Copyright &copy; 2023 Arya Athafarrel Syah</b></p>
 	</footer>
 
 </html>
